<resources>
    <string name="app_name">Count Me In</string>
    <string name="action_settings">Settings</string>

<!-- TODO: Remove or change this placeholder text -->


    <string name="qTitle">Write a question:</string>
    <string name="User">Username:</string>
    <string name="Alt1">Alternatives:</string>
    <string name="Theme">Theme:</string>
    <string name="qButtonText">NEXT</string>
    <string name="qButtonText2">SEND</string>

    <string name="aTitle">This is a question?</string>

    <string-array name="Themes">
        <item>Ice cubes</item>
        <item>Stars</item>
        <item>Ice cream</item>
        <item>Bottles</item>
        <item>Baloons</item>
    </string-array>

    <string-array name="numOfAlts">
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>

    </string-array>

<!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
