<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ff99cc00"
    android:weightSum="1">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/qTitle"
        android:id="@+id/textView9"
        android:layout_gravity="center_horizontal"
        android:textColor="#ffffffff"
        android:textSize="@dimen/qTitleSize"
        android:focusableInTouchMode="false"
        android:layout_marginLeft="7dp"
        android:layout_marginBottom="10dp" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/QuestionEdit"
        android:layout_gravity="center_horizontal"
        android:background="#ffffffff"
        android:height="140dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:inputType="textMultiLine"
        android:layout_marginBottom="40dp"
        android:textColor="#ff000000"
        android:layout_weight="0.10" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/User"
        android:id="@+id/textViewAlt1"
        android:layout_marginLeft="15dp"
        android:textColor="#ffffffff"
        android:textSize="25dp" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/UserNameEdit"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:background="#ffffffff"
        android:height="40dp"
        android:textColor="#ff000000"
        android:layout_marginBottom="40dp"
        android:layout_weight="0.07" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/Alt1"
        android:id="@+id/textViewAlt"
        android:layout_marginLeft="15dp"
        android:textColor="#ffffffff"
        android:textSize="25dp" />


    <Spinner
        android:layout_width="254dp"
        android:layout_height="38dp"
        android:layout_marginLeft="15dp"
        android:id="@+id/spinnerAlt"
        android:entries="@array/numOfAlts"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="#ff000000"
        android:background="#ffffffff"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/Theme"
        android:id="@+id/textViewAlt3"
        android:layout_marginLeft="15dp"
        android:textColor="#ffffffff"
        android:textSize="25dp" />


    <Spinner
        android:layout_width="256dp"
        android:layout_height="45dp"
        android:layout_marginLeft="15dp"
        android:id="@+id/spinnerTheme"
        android:entries="@array/Themes"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="#ff000000"
        android:background="#ffffffff"/>

    <Button
        android:layout_width="134dp"
        android:layout_height="wrap_content"
        android:text="@string/qButtonText"
        android:id="@+id/button5"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="40dp"
        android:textAppearance="?android:attr/textAppearanceMedium"/>


</LinearLayout>

    </ScrollView>